language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prefix_string_alias_in_let_assert.snap
---
source: language-server/src/tests/rename.rs
expression: "\nfn main() -> String {\n  let assert \"1\" as digit <> rest = \"1-wibble\"\n  digit\n}\n"
---
----- BEFORE RENAME
-- app.gleam

fn main() -> String {
  let assert "1" as digit <> rest = "1-wibble"
                    ↑▔▔▔▔                     
  digit
}


----- AFTER RENAME
-- app.gleam

fn main() -> String {
  let assert "1" as new_name <> rest = "1-wibble"
  new_name
}
