language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prefix_string_suffix_used_in_guard.snap
---
source: language-server/src/tests/rename.rs
expression: "\nfn main() {\n  case \"1-wibble\" {\n    \"1\" <> rest if rest == \"-wibble\" -> rest\n    _ -> \"\"\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

fn main() {
  case "1-wibble" {
    "1" <> rest if rest == "-wibble" -> rest
           ↑▔▔▔                             
    _ -> ""
  }
}


----- AFTER RENAME
-- app.gleam

fn main() {
  case "1-wibble" {
    "1" <> new_name if new_name == "-wibble" -> new_name
    _ -> ""
  }
}
