language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prefix_string_suffix_variable_in_let_assert.snap
---
source: language-server/src/tests/rename.rs
expression: "\nfn main() -> String {\n  let assert \"1\" <> rest = \"1-wibble\"\n  rest\n}\n"
---
----- BEFORE RENAME
-- app.gleam

fn main() -> String {
  let assert "1" <> rest = "1-wibble"
                    ↑▔▔▔             
  rest
}


----- AFTER RENAME
-- app.gleam

fn main() -> String {
  let assert "1" <> new_name = "1-wibble"
  new_name
}
